# DistributionSampling

./: CMakeLists.txt  CodingStyle.txt  Contributing.txt  DistributionSamplingConfig.cmake.in  InformationForDevelopers.txt  KWStyle.xml  LICENSE  MCMC_Doc  README.txt  build-script  build.sh  build_full.sh  full_build.sh
CMake/: FindCoral.cmake  FindGSL.cmake  FindMADAIEmulator.cmake  HasPosixPipes.cxx
applications/: ApplicationUtilities.cxx  ApplicationUtilities.h  CMakeLists.txt  Defaults.cxx  Defaults.h  PCADecompose.cxx  basicTrain.cxx  emulate.cxx  generateMCMCtrace.cxx  generateMCMCtraceExternal.cxx  generatePercentileGridTrace.cxx  generatePercentileGridTraceExternal.cxx  generateTrainingPoints.cxx  generateUniformTrace.cxx  madai_analyze_trace.cxx  madai_basic_train.cxx  madai_catenate_traces  madai_change_setting  madai_compute_resolving_power  madai_default_options.cxx  madai_emulate.cxx  madai_emulator_GUI  madai_generate_mcmc_trace.cxx  madai_generate_mcmc_trace_external.cxx  madai_generate_percentile_grid_trace.cxx  madai_generate_percentile_grid_trace_external.cxx  madai_generate_posterior_parameters.cxx  madai_generate_posterior_samples.cxx  madai_generate_trace.cxx  madai_generate_training_points.cxx  madai_gnuplot_scatterplot_matrix  madai_launch_multiple_madai_generate_trace  madai_pca_decompose.cxx  madai_print_default_settings.cxx  madai_set_variable  madai_subsample_text_file  madai_train_emulator.cxx  overview_template.html  printThetas.cxx  trainEmulator.cxx
applications/test/: CMakeLists.txt  EnsurePathSeparatorAtEndTest.cxx  FindIndexTest.cxx  GetExperimentalResultsFileTest.cxx  GetInactiveParameterFileTest.cxx  GetModelOutputDirectoryTest.cxx  GetPosteriorAnalysisDirectoryTest.cxx  LoadObservationsTest.cxx  LowerCaseTest.cxx  SetInactiveParametersTest.cxx  SplitStringTest.cxx
doc/: CMakeLists.txt  Doxyfile.in  doxyfile  mainpage.dox  make-documentation.sh
doc/CovarianceFunctions/: .gitignore  CovarianceFunctions.tex  Makefile  utfsymb.sty
doc/GaussianProccessEmulatorAlgorithm/: .gitignore  Gaussian_Proccess_Emulator_Algorithm.tex  Makefile  utfsymb.sty
doc/man1/: DistributionSampling.1  basicTrain.1  printThetas.1
doc/manual/: .gitignore  Makefile  aposteriori.tex  covariancefunctions.tex  download.tex  emulatortuning.tex  intro.tex  manual.tex  mcmc.tex  organizingdata.tex  pca.tex  settings.tex  stattheory.tex
main/: CMakeLists.txt  mcmc.cc
maintenance/: DistributionSamplingTest.sh  KWStyle.xml  KWStyleTest.xml  MADAILicense.txt  StyleCheck.sh
python/: convertPrattModelFormat.py  madai.py
src/: CMakeLists.txt  Configuration.h.in  CosmoLikelihoodDistribution.cxx  CosmoLikelihoodDistribution.h  CosmoModel.cxx  CosmoModel.h  CosmoPriorDistribution.cxx  CosmoPriorDistribution.h  CovarianceCalculator.h  DiceModel.cxx  DiceModel.h  Distribution.cxx  Distribution.h  ExternalModel.cxx  ExternalModel.h  GPEmulatedModel.cxx  GPEmulatedModel.h  Gaussian2DModel.cxx  Gaussian2DModel.h  GaussianDistribution.cxx  GaussianDistribution.h  GaussianProcessEmulatedModel.cxx  GaussianProcessEmulatedModel.h  GaussianProcessEmulator.cxx  GaussianProcessEmulator.h  GaussianProcessEmulatorDirectoryFormatIO.cxx  GaussianProcessEmulatorDirectoryFormatIO.h  GaussianProcessEmulatorDirectoryReader.cxx  GaussianProcessEmulatorDirectoryReader.h  GaussianProcessEmulatorSingleFileReader.cxx  GaussianProcessEmulatorSingleFileReader.h  GaussianProcessEmulatorSingleFileWriter.cxx  GaussianProcessEmulatorSingleFileWriter.h  GaussianProcessModelEmulator.cxx  GaussianProcessModelEmulator.h  InterModel.cxx  InterModel.h  InterpolatorPriorDistribution.cxx  InterpolatorPriorDistribution.h  LangevinSampler.cxx  (+80 more)
test/: CMakeLists.txt  DiceMCMC.cxx  EmulatorTest.cxx  ExternalModelMCMCTest.cxx  Gaussian2DMCMCTest.cxx  Gaussian2DModel.cxx  Gaussian2DModel.h  Gaussian2DModelTest.cxx  GaussianDistributionTest.cxx  GaussianProcessEmulatedModelTest.cxx  GaussianProcessEmulatorDirectoryReaderTest.cxx  GaussianProcessEmulatorTest.cxx  GaussianProcessEmulatorTestGenerator.cxx  GaussianProcessEmulatorTestGenerator.h  GradientOutputsTest.cxx  LangevinSamplerTest.cxx  LatinHypercubeGeneratorTest.cxx  MCMCRunTest.cxx  MarkovChainMonteCarloSamplerTest.cxx  MetropolisHastingsSamplerTest.cxx  ModelTest.cxx  NumericalGradientEstimationTest.cxx  PercentileGridSamplerTest.cxx  PrincipalComponentDecomposeTest.cxx  RandomTest.cxx  RegularStepGradientAscentSamplerTest.cxx  RegularStepGradientDescentOptimizerTest.cxx  RetainPrincipalComponentsTest.cxx  RuntimeParameterFileReaderTest.cxx  SampleTest.cxx  SimpleMetropolisHastingsSamplerTest.cxx  TestLikelihoodDistribution.h  TestModel.cxx  TestModel.h  TestPriorDistribution.cxx  TraceElementTest.cxx  TraceTest.cxx  UniformDistributionTest.cxx  VectorUtilities.h  emulator_emulator.py  (+2 more)
test/DiceMCMC/: DiceConfig.param
test/DiceMCMC/defaultpars/: mcmc.param  proposal.param
test/DirectoryStructureTest/statistical_analysis/: .gitignore
test/ExternalModelMCMCTest/: ExampleProcess.py  ExternalModelMCMCTestConfiguration.txt.in
test/Gaussian2DMCMC/defaultpars/: likelihood.param  mcmc.param  proposal.param  theta0.param
test/LangevinTestingPlots/: Info.txt
test/MarkovChainMonteCarloSamplerTest/: MarkovChainMonteCarloSamplerTest.csv
test/TestModel/defaultpars/: mcmc.param  theta0.param
tutorial/: .gitignore  generateParabolicTraining.py
tutorial/cup_example/: cup.py  cupscript2d.sh  cupscript3d.sh
tutorial/dice/: DiceModel.py
tutorial/document/: Makefile  ParabolicPotentialModel.html  StatisticsTutorial.tex  settings.html  tutorial.html  utfsymb.sty
tutorial/document/figures/: Models_Emulators_Likelihood.dia  kernel_functions.py
tutorial/examples/MCMC_Example/: MCMC_Example.cxx  Makefile
tutorial/examples/ParabolicPotentialModelCxx/: Makefile  ParabolicPotentialModel.cxx
tutorial/parabolic/: ParabolicPotentialModel.py  parabolic_interactive.py
tutorial/parabolic_example/: ParabolicPotentialModel.py  parabolic_evaluate.py  parabolic_interactive.py
